--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ apiURL = https://serpapi.com/search.json?engine=google_scholar_author&author_id=
 BLOB_READ_WRITE_TOKEN = vercel_blob_rw_ZE7fihOVDvhau21G_IY9xQV5LU750grjIZYu2gm2a76gHNe
 blobPath = scholar-jHE2AIN4MYpks4hEybpnQATFZ8zFBi.json
 blobUrl = https://ze7fihovdvhau21g.public.blob.vercel-storage.com/scholar-jHE2AIN4MYpks4hEybpnQATFZ8zFBi.json
+expiryFileUrl = https://ze7fihovdvhau21g.public.blob.vercel-storage.com/lastFetchTime-qCMT34O5V8zHF9D2VCtHpFhNBgQ16p.txt
+expiryFilePath = lastFetchTime-qCMT34O5V8zHF9D2VCtHpFhNBgQ16p.txt
